--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FrågeFeuden">
-        <activity android:name=".gamesActivity"></activity>
+        <activity android:name=".GameplayActivity"></activity>
+        <activity android:name=".gamesActivity" />
         <activity android:name=".addQuestionActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".MainActivity">
